refactor: list converting